--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -20,6 +20,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0 200px;
 }
 .nav-title{
     color: #181818;
@@ -39,3 +40,15 @@ nav a{
     color: #474747;
 }
 
+/*header styles*/
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.profile-pic{
+    height: 500px;
+}
