--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -15,6 +15,18 @@ body{
     padding: 15px 35px;
 
 }
+
+.section-title{
+    color: black;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.banner-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
 /*nav related styles*/
 nav{
     display: flex;
@@ -72,4 +84,18 @@ nav a{
 }
 .banner-description{
 
+}
+
+/*main section*/
+main{
+    max-width: 1140px ;
+    margin: 0 auto;
+}
+
+/*about section*/
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin-top: 30px;
 }
