--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -99,3 +99,10 @@ main{
     background: #FFF8F3;
     margin-top: 30px;
 }
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
