--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,7 +22,7 @@ body{
     font-size: 35px;
     font-weight: 700;
 }
-.banner-description{
+.section-description{
     color: #757575;
     text-align: center;
     font-size: 18px;
@@ -153,4 +153,12 @@ main section{
 .download-cv{
     text-align: center;
     margin-top: 50px;
+}
+
+/*footer*/
+footer{
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 200px;
+    margin-top: 100px;
 }
